chore(sonar): triage Bucket A backend SonarQube Critical/Major issues
Backend logic bucket (app/agents, app/services, app/jobs, app/slash, app/memory).
22 rules, 76 issues. Each cluster handled at narrowest scope:

- S1118 (8): added private ctors to utility classes (CronParser,
  MemoryStoreFactory, AgentService, ConfigService, ConversationService,
  EventLogger, NotificationBus, Tx).
- S112 (10): converted 5 IOException wraps to UncheckedIOException
  (AttachmentService x4, SkillPromotionService); suppressed the rest
  with rationale (Tx generic wrapper, SessionCompactor.Summarizer
  callback signature, LoadTestRunner mintAdminSessionCookie helper).
- S1181 (7): suppressed inline at top-level VT and JNI cleanup catches
  (ShutdownJob, ConversationService transcription, WhisperJniTranscriber,
  WhisperModelManager) — each is an intentional Throwable guard at a
  background-thread boundary.
- S6326 (5): converted literal "  " regex sequences to "{2}" quantifier
  in SkillLoader's YAML frontmatter patterns.
- S2589 (5): SkillLoader.formatAvailableSkills dead `compact` boolean
  removed (also fixes S1854); SkillVersionManager null-check on
  always-non-null array simplified; OkHttp Response.body() null checks
  dropped in LoadTestRunner, PricingRefreshService, WhisperModelManager
  (body() is non-null in OkHttp 5).
- S1172 (5): removed truly-unused providerName from fetchOllamaShow
  and sha256 from parseVerdict (method ref); suppressed signature-parity
  cases (ToolRegistry getToolDefsForAgent overloads,
  ModelDiscoveryService discoverLmStudioNative).
- S1168 (5): suppressed with docstring sentinel rationale where null
  vs empty has distinct semantics (ModelDiscoveryService.parseOllamaShow
  drop-this-model, Commands.findLatestAssistantUsage zeros-rendering).
- S107 (5): suppressed on streaming entrypoints and internal tool-loop
  dispatchers; signatures cannot shrink without touching every channel
  caller (runStreaming x2, callWithToolLoop, handleToolCallsStreami